[package]
name = "molnctl"
version = "0.11.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
chrono = { version = "0.4.30", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive", "env"] }
config = "0.13.3"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
difference = "2.0"
dirs-next = "2.0.0"
home = "0.5.5"
indexmap = { version = "2.2.5", features = ["serde"] }
oauth2 = "4.4.2"
once_cell = "1.18.0"
reqwest = { version = "0.11.20", features = ["json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
serde_yaml = "0.9.25"
tabled = "0.14.0"
tempfile = "3.10.1"
term = "0.7.0"
thiserror = "1.0.48"
time = { version = "0.3.36", features = ["serde", "serde-well-known"] }
tiny_http = "0.12.0"
tracing = "0.1.37"
tungstenite = { git = "https://github.com/snapview/tungstenite-rs", rev = "0fa4197", features = [
    "native-tls",
] }
url = "2.5.0"

[dependencies.openssl]
version = "0.10"
features = [
    "vendored"
]
