[package]
name = "molnctl"
version = "0.11.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
eyre = "0.6"
camino = "1.1.6"
chrono = { version = "0.4.30", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive", "env"] }
config = "0.13.3"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
difference = "2.0"
dirs-next = "2.0.0"
home = "0.5.5"
indexmap = { version = "2.2.5", features = ["serde"] }
indicatif = "0.17"
bollard = { version = "0.19.1", features = ["buildkit"] }
futures-util = "0.3"
bytes = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
hyper = { version = "0.14", features = ["stream"] }
tar = "0.4"
http-body-util = "0.1"
oauth2 = "4.4.2"
once_cell = "1.18.0"
reqwest = { version = "0.11.20", features = ["json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
serde_yaml = "0.9.25"
tabled = "0.14.0"
tempfile = "3.10.1"
bytesize = "1.3"
term = "0.7.0"
thiserror = "1.0.48"
time = { version = "0.3.36", features = ["serde", "serde-well-known"] }
tiny_http = "0.12.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tungstenite = { git = "https://github.com/snapview/tungstenite-rs", rev = "0fa4197", features = [
    "native-tls",
] }
url = "2.5.0"

[dependencies.openssl]
version = "0.10"
features = [
    "vendored"
]

[patch.crates-io]
bollard = { git = "https://github.com/molnett/bollard", branch = "mk/add_load_image" }
